[project]
name = "hive-crypto"
dynamic = ["version"]
authors = [{ name = "Gary Benson", email = "gary@gbenson.net" }]
description = "Cryptography library for Hive"
readme = "README.md"
license = "MIT"
dependencies = [
    "PyNaCl",
]

[project.urls]
Homepage = "https://github.com/gbenson/hive/tree/main/libs/crypto"
Source = "https://github.com/gbenson/hive"

[project.scripts]
hive-keygen = "hive.crypto.keygen:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "hive.crypto.__version__.__version__"}

[tool.pytest.ini_options]
addopts = "--cov=hive.crypto"
log_level="debug"

[tool.coverage.run]
omit = [
    "*/venv/*",
    "*/.venv/*",
    "*/hive/*/__main__.py",
]

[tool.coverage.report]
skip_covered = true
