[project]
name = "hive-email"
dynamic = ["version"]
authors = [{ name = "Gary Benson", email = "gary@gbenson.net" }]
description = "Email message handling for Hive."
readme = "README.md"
requires-python = ">=3.10"  # match..case
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/gbenson/hive/tree/main/libs/email"
Source = "https://github.com/gbenson/hive"

[project.optional-dependencies]
html = [
    "html2text",
]
openai = [
    "hive-common",
    "openai",
]

[project.scripts]
build-body-variant-corpus = "hive.email.research.body_variants_corpus:corpus.main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "hive.email.__version__.__version__"}

[tool.pytest.ini_options]
addopts = "--cov=hive.email"

[tool.coverage.run]
omit = [
    "*/venv/*",
    "*/.venv/*",
    "*/hive/email/research/*",
]
