[project]
name = "hive-messagebus"
dynamic = ["version"]
authors = [{ name = "Gary Benson", email = "gary@gbenson.net" }]
description = "Messaging layer for Hive"
readme = "README.md"
requires-python = ">=3.10"  # match..case
dependencies = [
    "hive-config",
    "pika",
]

[project.urls]
Homepage = "https://github.com/gbenson/hive/tree/main/libs/hive-messagebus"
Source = "https://github.com/gbenson/hive"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "hive.messagebus.__version__.__version__"}

[tool.pytest.ini_options]
addopts = "--cov=hive.messagebus"

[tool.coverage.run]
omit = [
    "*/venv/*",
    "*/.venv/*",
]
