[project]
name = "hive-mediawiki"
dynamic = ["version"]
authors = [{ name = "Gary Benson", email = "gary@gbenson.net" }]
description = "MediaWiki interface for Hive"
readme = "README.md"
license = "MIT"
dependencies = [
    "hive-common>=0.1.0",
    "pymediawiki",
]

[project.urls]
Homepage = "https://github.com/gbenson/hive/tree/main/libs/mediawiki"
Source = "https://github.com/gbenson/hive"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "hive.mediawiki.__version__.__version__"}

[tool.pytest.ini_options]
addopts = "--cov=hive.mediawiki"
log_level="debug"

[tool.coverage.run]
omit = [
    "*/venv/*",
    "*/.venv/*",
    "*/hive/*/__main__.py",
]

[tool.coverage.report]
skip_covered = true
