[project]
name = "hive-chat-router"
dynamic = ["version"]
authors = [{ name = "Gary Benson", email = "gary@gbenson.net" }]
description = "Chat message router for Hive"
dependencies = [
    "hive-chat>=0.0.9",
    "hive-common>=0.1.0",
    "hive-messaging>=0.12.1",
    "hive-service>=0.0.9",
]

[project.scripts]
hive-chat-router = "hive.chat_router:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "hive.chat_router.__version__.__version__"}

[tool.pytest.ini_options]
addopts = "--cov=hive.chat_router"

[tool.coverage.run]
omit = [
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
skip_covered = true
