[project]
name = "hive-chat-router"
dynamic = ["version"]
authors = [{ name = "Gary Benson", email = "gary@gbenson.net" }]
description = "Chat message router for Hive"
dependencies = [
    "cloudevents[pydantic]",
    "hive-chat>=0.1.1",
    "hive-common>=0.1.1",
    "hive-messaging>=0.12.8",
    "hive-service>=0.0.13",
    "pyspellchecker",
]

[project.scripts]
hive-chat-router = "hive.chat_router:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "hive.chat_router.__version__.__version__"}

[tool.pytest.ini_options]
addopts = "--cov=hive.chat_router"
log_level="debug"

[tool.coverage.run]
omit = [
    "*/venv/*",
    "*/.venv/*",
    "*/hive/*/__main__.py",
]

[tool.coverage.report]
skip_covered = true
