[project]
name = "hive-email-receiver"
dynamic = ["version"]
authors = [{ name = "Gary Benson", email = "gary@gbenson.net" }]
description = "Email receiver service for Hive"
readme = "README.md"
dependencies = [
    "hive-common>=0.0.3",
    "hive-email",
    "hive-messaging>=0.15.1",
    "hive-service>=0.1.0",
    "imapclient",
    "valkey",
]

[project.scripts]
hive-email-receiver = "hive.email_receiver:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "hive.email_receiver.__version__.__version__"}

[tool.pytest.ini_options]
addopts = "--cov=hive.email_receiver"
log_level="debug"

[tool.coverage.run]
omit = [
    "*/venv/*",
    "*/.venv/*",
    "*/hive/*/__main__.py",
]

[tool.coverage.report]
skip_covered = true
