[project]
name = "hive-llm-chatbot"
dynamic = ["version"]
authors = [{ name = "Gary Benson", email = "gary@gbenson.net" }]
description = "LLM chatbot for Hive"
dependencies = [
    "hive-common[langchain-ollama]>=0.3.3",
    "hive-messaging>=0.15.2",
    "hive-service>=0.2.0",
    "valkey~=6.1",
]

[project.scripts]
hive-llm-chatbot = "hive.llm_chatbot:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "hive.llm_chatbot.__version__.__version__"}

[tool.pytest.ini_options]
addopts = "--cov=hive.llm_chatbot"
log_level="debug"

[tool.coverage.run]
omit = [
    "*/venv/*",
    "*/.venv/*",
    "*/hive/*/__main__.py",
]

[tool.coverage.report]
skip_covered = true
