[project]
name = "hive-llm-chatbot"
dynamic = ["version"]
authors = [{ name = "Gary Benson", email = "gary@gbenson.net" }]
description = "LLM chatbot for Hive"
requires-python = ">=3.10"  # match..case
dependencies = [
    "hive-common[langchain-ollama]>=0.3.6",
    "hive-messaging>=0.16.4",
    "hive-service>=0.2.4",
    "typing-extensions",
    "valkey~=6.1",
]

[project.scripts]
llm-chatbot-listener = "hive.llm_chatbot.listener:main"
llm-chatbot-modeler = "hive.llm_chatbot.modeler:main"
llm-chatbot-responder = "hive.llm_chatbot.responder:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "hive.llm_chatbot.__version__.__version__"}

[tool.mypy]
mypy_path = "../../libs/common:../../libs/messaging:../../libs/service"
warn_unused_configs = true
strict = true

[tool.pytest.ini_options]
addopts = "--cov=hive.llm_chatbot"
log_level="debug"

[tool.coverage.run]
omit = [
    "*/venv/*",
    "*/.venv/*",
    "*/hive/*/__main__.py",
]

[tool.coverage.report]
skip_covered = true
