[project]
name = "hive-matrix-connector"
dynamic = ["version"]
authors = [{ name = "Gary Benson", email = "gary@gbenson.net" }]
description = "Matrix connector service for Hive"
readme = "README.md"
dependencies = [
    "hive-common",
    "hive-messaging",
    "hive-service",
    "matrix-commander",
]

[project.scripts]
hive-matrix-sender = "hive.matrix_connector.sender:main"
hive-matrix-receiver = "hive.matrix_connector.receiver:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "hive.matrix_connector.__version__.__version__"}

[tool.pytest.ini_options]
addopts = "--cov=hive.matrix_connector"

[tool.coverage.run]
omit = [
    "*/venv/*",
    "*/.venv/*",
]
