[project]
name = "hive-matrix-connector"
dynamic = ["version"]
authors = [{ name = "Gary Benson", email = "gary@gbenson.net" }]
description = "Matrix connector service for Hive"
readme = "README.md"
dependencies = [
    "hive-chat>=0.0.9",
    "hive-common",
    "hive-messaging>=0.12.0",
    "hive-service>=0.0.8",
    "matrix-commander",
    "valkey",
]

[project.scripts]
hive-matrix-sender = "hive.matrix_connector.sender:main"
hive-matrix-receiver = "hive.matrix_connector.receiver:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "hive.matrix_connector.__version__.__version__"}

[tool.pytest.ini_options]
addopts = "--cov=hive.matrix_connector"

[tool.coverage.run]
omit = [
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
skip_covered = true
