[project]
name = "hive-matrix-router"
dynamic = ["version"]
authors = [{ name = "Gary Benson", email = "gary@gbenson.net" }]
description = "Incoming Matrix event router for Hive"
dependencies = [
    "hive-common",
    "hive-messaging",
    "hive-service",
]

[project.scripts]
hive-matrix-router = "hive.matrix_router:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "hive.matrix_router.__version__.__version__"}

[tool.pytest.ini_options]
addopts = "--cov=hive.matrix_router"

[tool.coverage.run]
omit = [
    "*/venv/*",
    "*/.venv/*",
]
