[project]
name = "hive-reading-list-updater"
dynamic = ["version"]
authors = [{ name = "Gary Benson", email = "gary@gbenson.net" }]
description = "Reading list updater for Hive"
dependencies = [
    "hishel",
    "hive-common",
    "hive-mediawiki",
    "hive-messaging",
    "hive-service",
    "httpx[http2,brotli,zstd]",
    "lxml",
]

[project.scripts]
hive-reading-list-updater = "hive.reading_list_updater:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "hive.reading_list_updater.__version__.__version__"}

[tool.pytest.ini_options]
addopts = "--cov=hive.reading_list_updater"

[tool.coverage.run]
omit = [
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
skip_covered = true
