[project]
name = "hive-reading-list-updater"
dynamic = ["version"]
authors = [{ name = "Gary Benson", email = "gary@gbenson.net" }]
description = "Reading list updater for Hive"
dependencies = [
    "beautifulsoup4",
    "hive-common[httpx,brotli,zstd]>=0.3.4",
    "hive-mediawiki",
    "hive-messaging>=0.12.8",
    "hive-service>=0.0.13",
    "lxml",
]

[project.scripts]
hive-reading-list-updater = "hive.reading_list_updater:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "hive.reading_list_updater.__version__.__version__"}

[tool.pytest.ini_options]
addopts = "--cov=hive.reading_list_updater"
log_level="debug"

[tool.coverage.run]
omit = [
    "*/venv/*",
    "*/.venv/*",
    "*/hive/*/__main__.py",
]

[tool.coverage.report]
skip_covered = true
