[project]
name = "hive-service-monitor"
dynamic = ["version"]
authors = [{ name = "Gary Benson", email = "gary@gbenson.net" }]
description = "Service status monitor for Hive"
dependencies = [
    "hive-chat>=0.0.8",
    "hive-common",
    "hive-messaging>=0.11.0",
    "hive-service>=0.0.7",
    "valkey",
]

[project.scripts]
hive-service-monitor = "hive.service_monitor:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "hive.service_monitor.__version__.__version__"}

[tool.pytest.ini_options]
addopts = "--cov=hive.service_monitor"

[tool.coverage.run]
omit = [
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
skip_covered = true
