[project]
name = "hive-vane-webui-api"
dynamic = ["version"]
authors = [{ name = "Gary Benson", email = "gary@gbenson.net" }]
description = "Web chat API gateway for Hive"
dependencies = [
    "hive-common",
    "hive-messaging>=0.9.0",
    "hive-service",
    "pyargon2",
    "valkey",
]

[project.optional-dependencies]
dev = [
    "requests",
]

[project.scripts]
hive-vane-webui-api = "hive.vane_webui_api:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "hive.vane_webui_api.__version__.__version__"}

[tool.pytest.ini_options]
addopts = "--cov=hive.vane_webui_api"

[tool.coverage.run]
omit = [
    "*/venv/*",
    "*/.venv/*",
]
